kubernetes/apps/cryptofolio/cryptofolio/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cryptofolio
  namespace: cryptofolio
  labels:
    app: cryptofolio
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: cryptofolio
  template:
    metadata:
      labels:
        app: cryptofolio
    spec:
      restartPolicy: Always
      containers:
        - name: cryptofolio
          image: xtrendence/cryptofolio:V.2.2.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              memory: 256Mi
              cpu: 100m
            limits:
              memory: 1Gi
              cpu: 500m
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
