kubernetes/apps/cryptofolio/cryptofolio/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cryptofolio
  namespace: cryptofolio
spec:
  hostnames:
    - crypto.garage.neo-tix.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: cryptofolio
          namespace: cryptofolio
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
